# Dark-Orchestrator

./: .gitignore  AGENTS.md  README.md  compose.yaml  main.py  pyproject.toml
cli_tests/: conftest.py  test_cli.py
docker/postgres/: init-test-databases.sql
docs/: dependency-audit.md  test-strategy.md
docs/architecture/: architecture.md
docs/architecture/adr/: adr1_dark_orchestrator.md  adr2_process_script_sources.md  adr3_command_line_client.md  index.md
processes/: README.md  contact_agent.py
scripts/: reset_database.py
src/: cli.py  database.py  errors.py  server.py
src/config/: settings.py
src/infrastructure/: database.py  executor.py  script_files.py
src/migrations/: 001_initial.sql  002_process_sources.sql  003_run_now_requests.sql  004_job_arguments.sql
src/models/: job.py  job_run.py  process.py
src/services/: executor.py  job_service.py  orchestrator.py  process_service.py
tests/: conftest.py  test_concurrency.py  test_frontend_serving.py  test_job_claiming.py  test_job_execution.py  test_job_management.py  test_job_overlap.py  test_orchestrator_controls.py  test_persistence.py  test_process_management.py  test_process_source_migration.py  test_process_sources.py  test_schedule_validation.py  test_update_validation.py
tests/cli/: conftest.py  test_cli.py
tests/cli/fixtures/: file_process.sh
tests/processes/: test_contact_agent.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  Icon.tsx  api.ts  main.tsx  styles.css  types.ts
web/tests/: dashboard.spec.ts
(+1 files in other folders)
